[gd_scene load_steps=24 format=3 uid="uid://cok6gvdxjgywq"]

[ext_resource type="Script" uid="uid://dsbmrtptr08ap" path="res://scripts/Character/Kenley_Character.gd" id="1_21ah3"]
[ext_resource type="Resource" uid="uid://cv82ew5ji8w54" path="res://scenes/Base_Player_Stats.tres" id="2_duim7"]
[ext_resource type="Texture2D" uid="uid://cgxsuej7wcvqt" path="res://assets/Kenley_Sprite.png" id="3_r68wp"]
[ext_resource type="Script" uid="uid://c1fthtfbmc1rp" path="res://scripts/States/StateMachine.gd" id="3_rguqb"]
[ext_resource type="Script" uid="uid://b6ynhdemjpa87" path="res://scripts/States/Kenly_States/Idle_State.gd" id="4_fwsyb"]
[ext_resource type="Script" uid="uid://cmrhlb4i788gc" path="res://scenes/kenly_sprite.gd" id="4_q6urs"]
[ext_resource type="Script" uid="uid://mkhmgpa3km1l" path="res://scripts/States/Kenly_States/Running_State.gd" id="5_25pii"]
[ext_resource type="Script" uid="uid://tsgrb0oq1b3x" path="res://scripts/States/Kenly_States/Jumping_State.gd" id="6_exdhi"]
[ext_resource type="Script" uid="uid://bg7f1iwwnnk6l" path="res://scripts/States/Kenly_States/Falling_State.gd" id="7_25pii"]
[ext_resource type="Script" uid="uid://dp74djouk71ts" path="res://scripts/StatusEffects/Status_Effect_Manager.gd" id="8_exdhi"]
[ext_resource type="Script" uid="uid://cc8rhy5ppo4nm" path="res://scripts/States/Kenly_States/Basic_Attack_Script.gd" id="9_r68wp"]
[ext_resource type="Script" uid="uid://lbreutrqdu6t" path="res://scripts/Health/health.gd" id="9_r87yu"]
[ext_resource type="Script" uid="uid://c6kmqf1lqoc6x" path="res://scripts/States/Kenly_States/Gliding_State.gd" id="10_lkiy7"]
[ext_resource type="Script" uid="uid://dkqvnjbhyafhg" path="res://scripts/shooting_state.gd" id="12_356g5"]
[ext_resource type="PackedScene" uid="uid://3ixrip08xoeh" path="res://fairy_bullet.tscn" id="13_356g5"]
[ext_resource type="Texture2D" uid="uid://be4vuo0hak4m" path="res://assets/placeholder128.png" id="14_4yo34"]
[ext_resource type="Texture2D" uid="uid://d1bsqlqgynylv" path="res://assets/pixie_dust.png" id="14_ftwfq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_duim7"]
atlas = ExtResource("3_r68wp")
region = Rect2(0, 0, 312, 309)

[sub_resource type="SpriteFrames" id="SpriteFrames_jp3po"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_duim7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksmjn"]
size = Vector2(24, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_dfeyu"]
radius = 16.1245

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q6urs"]
particle_flag_disable_z = true
angle_min = -261.1
angle_max = 180.0
direction = Vector3(-1, -1, 0)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
scale_min = 0.05
scale_max = 0.05

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ftwfq"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(0, 1, 1)
angle_min = 1.07288e-05
angle_max = 90.0
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_min = 10.0
initial_velocity_max = 60.0
gravity = Vector3(0, 98, 0)
scale_min = 0.05
scale_max = 0.05

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "status_manager", "health_component") groups=["player"]]
light_mask = 524288
script = ExtResource("1_21ah3")
stats = ExtResource("2_duim7")
state_machine = NodePath("StateMachine")
status_manager = NodePath("StatusEffectManager")
health_component = NodePath("Health")
metadata/_edit_horizontal_guides_ = [-86.0]

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 524288
texture_filter = 1
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_jp3po")
script = ExtResource("4_q6urs")
bob_height = 4.0
duration = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_ksmjn")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("inital_state")]
script = ExtResource("3_rguqb")
inital_state = NodePath("Idle_State")
metadata/_custom_type_script = "uid://c1fthtfbmc1rp"

[node name="Idle_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_fwsyb")
player = NodePath("../..")

[node name="Running_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "particles")]
script = ExtResource("5_25pii")
player = NodePath("../..")
particles = NodePath("../../DirectionChangeParticles")

[node name="Jumping_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "particles")]
script = ExtResource("6_exdhi")
player = NodePath("../..")
particles = NodePath("../../JumpParticles")

[node name="Falling_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_25pii")
player = NodePath("../..")

[node name="Attack_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "debug")]
script = ExtResource("9_r68wp")
player = NodePath("../..")
debug = NodePath("../../DealDamageArea/Sprite2D")

[node name="Gliding_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "particles")]
script = ExtResource("10_lkiy7")
player = NodePath("../..")
particles = NodePath("../../GlideParticles")
max_fly_timer = 3.0

[node name="Shooting_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "Shooting_Point")]
script = ExtResource("12_356g5")
player = NodePath("../..")
Bullet = ExtResource("13_356g5")
Shooting_Point = NodePath("../../ShootingPoint")

[node name="StatusEffectManager" type="Node" parent="."]
script = ExtResource("8_exdhi")
metadata/_custom_type_script = "uid://dp74djouk71ts"

[node name="Health" type="Node" parent="."]
script = ExtResource("9_r87yu")

[node name="DealDamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealDamageArea"]
position = Vector2(32, 0)
shape = SubResource("CircleShape2D_dfeyu")

[node name="Sprite2D" type="Sprite2D" parent="DealDamageArea"]
position = Vector2(32, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("14_4yo34")
hframes = 14
vframes = 16

[node name="Label" type="Label" parent="."]
offset_left = -21.3335
offset_top = -64.0
offset_right = 18.6665
offset_bottom = -41.0

[node name="DirectionChangeParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 32)
emitting = false
amount = 20
texture = ExtResource("14_ftwfq")
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_q6urs")

[node name="JumpParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(0, 32)
emitting = false
amount = 20
texture = ExtResource("14_ftwfq")
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ftwfq")

[node name="GlideParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(0, 32)
emitting = false
amount = 10
texture = ExtResource("14_ftwfq")
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_ftwfq")

[node name="ShootingPoint" type="Node2D" parent="."]
position = Vector2(32, 0)
